# whisper_localapp

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: settings.local.json
.serena/: project.yml
WhisperBackendAPI/: Cargo.toml  Operation.md  README.md  build.rs  build.sh  build_config.toml  build_kyodo.sh  config.toml  run.sh  test_all.sh  test_gpu.sh
WhisperBackendAPI/.serena/: project.yml
WhisperBackendAPI/.serena/memories/: coding_style.md  post_task_checklist.md  project_overview.md  suggested_commands.md
WhisperBackendAPI/src/: audio.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  whisper.rs
WhisperBackendAPI/tests/: audio_test.rs  basic_test.rs  build_config_test.rs  config_test.rs  gpu_test.rs  handlers_test.rs  health_model_name_test.rs  integration_test.rs  models_test.rs  test_mocks.rs  whisper_test.rs
WhisperRealtimeAPI/: API_documents.md  Cargo.toml  README.md  build.rs  realtime_plan.md  run.sh
WhisperRealtimeAPI/.target/: .rustc_info.json
WhisperRealtimeAPI/.target/debug/.fingerprint/bitflags-22f55aafe697bb85/: output-lib-bitflags
WhisperRealtimeAPI/.target/debug/.fingerprint/bytes-e9fddd1bd45d8900/: output-lib-bytes
WhisperRealtimeAPI/.target/debug/.fingerprint/cfg-if-5efacd4c40f67578/: output-lib-cfg_if
WhisperRealtimeAPI/.target/debug/.fingerprint/either-a52a341295172a3a/: output-lib-either
WhisperRealtimeAPI/.target/debug/.fingerprint/equivalent-fb6cc83cf281e9bc/: output-lib-equivalent
WhisperRealtimeAPI/.target/debug/.fingerprint/fnv-293287ae6d18546d/: output-lib-fnv
WhisperRealtimeAPI/.target/debug/.fingerprint/futures-core-bc9dc0fd63aebce4/: output-lib-futures_core
WhisperRealtimeAPI/.target/debug/.fingerprint/futures-sink-2dce04bb75870a40/: output-lib-futures_sink
WhisperRealtimeAPI/.target/debug/.fingerprint/hashbrown-58495ef904525875/: output-lib-hashbrown
WhisperRealtimeAPI/.target/debug/.fingerprint/itoa-b11a99c3fb91e0ba/: output-lib-itoa
WhisperRealtimeAPI/.target/debug/.fingerprint/libc-02fa5b38ea91801a/: build-script-build-script-build  build-script-build-script-build.json
WhisperRealtimeAPI/.target/debug/.fingerprint/libc-d25a82907f1ce976/: build-script-build-script-build  build-script-build-script-build.json
WhisperRealtimeAPI/.target/debug/.fingerprint/log-16e996b514ebeb42/: output-lib-log
WhisperRealtimeAPI/.target/debug/.fingerprint/memchr-680acf3e29a417ed/: output-lib-memchr
WhisperRealtimeAPI/.target/debug/.fingerprint/once_cell-140027e2059e248c/: output-lib-once_cell
WhisperRealtimeAPI/.target/debug/.fingerprint/pin-project-lite-8304a63f5944e937/: output-lib-pin_project_lite
WhisperRealtimeAPI/.target/debug/.fingerprint/pin-utils-4afe9bfe4113f5ad/: output-lib-pin_utils
WhisperRealtimeAPI/.target/debug/.fingerprint/prettyplease-e97b9ec1045a7c81/: build-script-build-script-build  build-script-build-script-build.json
WhisperRealtimeAPI/.target/debug/.fingerprint/proc-macro2-a923716fdc1423c7/: build-script-build-script-build  build-script-build-script-build.json
WhisperRealtimeAPI/.target/debug/.fingerprint/quote-3360d067b27f704c/: build-script-build-script-build  build-script-build-script-build.json
WhisperRealtimeAPI/.target/debug/.fingerprint/slab-3f53b5c5532ac7a8/: output-lib-slab
WhisperRealtimeAPI/.target/debug/.fingerprint/unicode-ident-796da7d7beff3c43/: output-lib-unicode_ident
WhisperRealtimeAPI/config/: asr_pipeline.yaml  audio_processing.yaml  monitoring.yaml  server.yaml  system_requirements.yaml  whisper_model.yaml
WhisperRealtimeAPI/proto/: asr.proto
WhisperRealtimeAPI/src/: lib.rs  main.rs
WhisperRealtimeAPI/src/asr/: client.rs  error.rs  grpc_client.rs  mock.rs  mod.rs  server.rs  whisper_engine.rs
WhisperRealtimeAPI/src/audio_pipeline/: frame_reconstructor.rs  mod.rs  normalizer.rs  opus_decoder.rs  resampler.rs  utils.rs
WhisperRealtimeAPI/src/config/: asr.rs  audio.rs  error.rs  mod.rs  monitoring.rs  server.rs  system.rs  whisper.rs
WhisperRealtimeAPI/src/http_api/: mod.rs
WhisperRealtimeAPI/src/ingest/: mod.rs
WhisperRealtimeAPI/src/realtime/: mod.rs
WhisperRealtimeAPI/src/server/: mod.rs
WhisperRealtimeAPI/src/signaling/: error.rs  mod.rs  resource.rs  session.rs  token.rs  websocket.rs
WhisperRealtimeAPI/src/transport/: error.rs  in_memory.rs  mod.rs  profile.rs  quic_handler.rs  session.rs  webrtc.rs
WhisperRealtimeAPI/tests/: asr.rs  asr_server.rs  audio.rs  config_env_override.rs  config_server.rs  docs_compile.rs  grpc_adapter.rs  grpc_client_config.rs  http_api.rs  ingest.rs  integration.rs  run_sh_dry_run.rs  server_websocket.rs  server_websocket_missing_session.rs  signaling.rs
WhisperRealtimeAPI/tests/asr/: test_streaming_inference.rs
WhisperRealtimeAPI/tests/audio/: test_frame_reconstructor.rs  test_resampler.rs
WhisperRealtimeAPI/tests/integration/: mod.rs  test_network_resilience.rs  test_quic_transport.rs  test_webrtc_integration.rs
WhisperRealtimeAPI/tests/signaling/: test_session_api.rs
whisperGUIapp/: Cargo.toml  README.md  config.toml  download_models.sh  realtime.md  tauri.conf.json
whisperGUIapp/.serena/: project.yml
whisperGUIapp/icons/: icon.icns
whisperGUIapp/models/: .gitkeep  README.txt
whisperGUIapp/src/: audio.rs  config.rs  lib.rs  main.rs  models.rs  realtime.rs  utils.rs  whisper.rs
whisperGUIapp/tests/: config_timeout.rs  realtime_model_selection.rs  temp_dir_abs.rs  utils_url.rs
whisperWEBui/: Cargo.toml  README.md  REALTIME_INTEGRATION.md  config.toml
whisperWEBui/.serena/: project.yml
whisperWEBui/src/: client.rs  config.rs  handlers.rs  lib.rs  main.rs
whisperWEBui/static/css/: style.css
whisperWEBui/static/js/: app.js  realtime-webrtc.js
whisperWEBui/tests/: config_file_test.rs  frontend_mappings.rs  health_model_name_test.rs  integration_test.rs  realtime_proxy.rs  timestamp_parsing.rs  upload_overlay.rs  websocket_test.rs  with_timestamps_default.rs
