[package]
name = "WhisperBackendAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Whisper integration
whisper-rs = { version = "0.11", optional = true }

# Error handling
anyhow = "1.0"

# Audio processing
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
rubato = "0.14"

# Configuration and file handling
toml = "0.8"
tempfile = "3.0"

# HTTP client for model downloads
reqwest = { version = "0.11", features = ["blocking", "stream"] }

# Utilities
chrono = { version = "0.4", features = ["clock"] }
dirs-next = "2"
crossbeam-channel = "0.5"

# Logging and HTTP middleware
env_logger = "0.11"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Features
[features]
default = ["whisper"]
whisper = ["whisper-rs"]
cuda = ["whisper-rs/cuda"]
opencl = ["whisper-rs/opencl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
