[package]
name = "whisper_realtime_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
version-compare = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

[dev-dependencies]
once_cell = "1"
futures = "0.3"
serde_json = "1.0"
