[package]
name = "whisper_realtime_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
version-compare = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

# WebSocket/QUIC 依存は削除（HTTP/SSEへ移行）
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }

# Audio codecs
audiopus = "0.3.0-rc.0"

# gRPC for ASR service
tonic = "0.12"
prost = "0.13"
whisper-rs = "0.10"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }

# Additional utilities
bytes = "1.0"
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
once_cell = "1"
futures = "0.3"
serde_json = "1.0"
