[package]
name = "whisperGUIapp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
rubato = "0.14"
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "window-create", "fs-write-file", "path-all"] }
toml = "0.8"
whisper-rs = "0.11"
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
tauri-build = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
