[package]
name = "whisperGUIapp"
version = "0.1.0"
edition = "2021"

[features]
default = ["tauri-app", "custom-protocol"]
tauri-app = ["tauri"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
rubato = "0.14"
toml = "0.8"
whisper-rs = "0.11"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
tauri = { version = "1.5", optional = true, features = [ "fs-write-file", "dialog-open", "dialog-ask", "fs-read-file", "fs-create-dir", "dialog-confirm", "fs-copy-file", "dialog-message", "shell-open", "path-all", "fs-rename-file", "clipboard-all", "fs-remove-dir", "fs-remove-file", "fs-exists", "dialog-save"] }
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["clock"] }
dirs-next = "2"
once_cell = "1.19"



[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "0.12", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
